--- a/templates/healthdiary.html
+++ b/templates/healthdiary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=no" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/heaithdiary.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/healthdiary.css' %}" />
     <title>登入頁面</title>
     <link rel="stylesheet" type="text/css" href="login.css" />
     <script type="text/javascript" src="login.js"></script>
