--- a/templates/healthdiary.html
+++ b/templates/healthdiary.html
@@ -29,7 +29,7 @@
             <p><label class="label_input">密碼</label><input type="text" id="password" class="text_field" /></p>
             <div id="login_control">
                 <!--<input type="button" id="btn_login" value="登入" onclick="login();" />-->
-                <a href="https://thehealthdiary.w3spaces.com/index.html?bypass-cache=1624114444"><input type="button"
+                <a href="https://site-4783419-5516-9567.mystrikingly.com"><input type="button"
                         id="btn_login" value="登入" onclick="login();" /></a>
                 <a id="forget_pwd" href="forget_pwd.html">忘記密碼？</a>
             </div>
